--- a/accommodation.html
+++ b/accommodation.html
@@ -125,7 +125,7 @@
 		<div class="row">
 			<div id="footer" class="col-lg-12">
       			<small>
-      				<p>&copy; 2016 Waverly Guest House - Design by <a href="http://www.expressiveweb.co.za">ExpressiveWeb</a></p>
+      				<p>&copy; 2016 Waverly Guest House - Design by <a href="https://www.linkedin.com/in/zakhele-sibanda-3168b1139/">Zakhele Sibanda</a></p>
       			</small>
     		</div>
 		</div>
